Add TPulse icon

--- a/frontend/src/styles/components/_chain-card.scss
+++ b/frontend/src/styles/components/_chain-card.scss
@@ -139,6 +139,10 @@
   &.bullit {
     background-image: url("/images/icons/icon-bullit.jpeg");
   }
+
+  &.tpulse {
+    background-image: url("/images/icons/icon-tpulse.png");
+  }
 }
 
 .chain-name {
