--- a/frontend/src/styles/partials/_misc-ui.scss
+++ b/frontend/src/styles/partials/_misc-ui.scss
@@ -88,6 +88,11 @@
       background-image: url("/images/icons/icon-bullit.jpeg");
     }
   }
+  &.tpulse {
+    &:before {
+      background-image: url("/images/icons/icon-tpulse-token.png");
+    }
+  }
 }
 
 .currency-link {
