--- a/frontend/src/styles/sections/_home.scss
+++ b/frontend/src/styles/sections/_home.scss
@@ -281,6 +281,22 @@
       transform: translateY(2px);
     }
   }
+
+  &.tpulse {
+    background-image: url("/images/icons/icon-tpulse.png");
+    height: 24px;
+    width: 24px;
+    &::after{
+      content: "TPULSE";
+      margin-left: 30px;
+      display: flex;
+      align-items: center;
+      font-weight: 550;
+      color: $color-white;
+      letter-spacing: 1px;
+      transform: translateY(2px);
+    }
+  }
 }
 
 .content.check {
